--- a/page1_belugawhale.html
+++ b/page1_belugawhale.html
@@ -29,205 +29,221 @@
     <main>
       <!-- heading and main image -->
       <div id="fullContent">
-      <div class="section1">
-        <img
-          id="mainimage"
-          src="../images/beluga/beluga.jpg"
-          alt="beluga whale"
-        />
-        <div>
-          <h1>BELUGA WHALE</h1>
-          <p>Beluga, White whale, Sea Canary, Melonhead</p>
+        <div class="section1">
+          <img
+            id="mainimage"
+            src="../images/beluga/beluga.jpg"
+            alt="beluga whale"
+          />
+          <div>
+            <h1>BELUGA WHALE</h1>
+            <p>Beluga, White whale, Sea Canary, Melonhead</p>
+          </div>
         </div>
-      </div>
-      <!-- content begins -->
-      <div class="intro">
-        <div id="intropara">
-          <p>
-            The beluga is also called the white whale because of its milky white
-            skin and is the only whale species that is completely white. It is
-            gray when born and this color fades gradually with age. It is small
-            in size and lacks a dorsal fin. Belugas are toothed whales, with
-            flexible lips that can produce a range of facial expressions. They
-            have wide, paddle-like flippers and notches in their tails. Their
-            necks are extremely flexible and they can turn their heads almost 90
-            degrees sideways. Their extremely thick layer of blubber provides
-            insulation in freezing Arctic waters. Their bodies are fifty percent
-            fat, much higher than other non-Arctic whales, with a body fat of
-            only twenty percent.
-          </p>
+        <!-- content begins -->
+        <div class="intro">
+          <div id="intropara">
+            <p>
+              The beluga is also called the white whale because of its milky
+              white skin and is the only whale species that is completely white.
+              It is gray when born and this color fades gradually with age. It
+              is small in size and lacks a dorsal fin. Belugas are toothed
+              whales, with flexible lips that can produce a range of facial
+              expressions. They have wide, paddle-like flippers and notches in
+              their tails. Their necks are extremely flexible and they can turn
+              their heads almost 90 degrees sideways. Their extremely thick
+              layer of blubber provides insulation in freezing Arctic waters.
+              Their bodies are fifty percent fat, much higher than other
+              non-Arctic whales, with a body fat of only twenty percent.
+            </p>
+          </div>
+          <div class="box">
+            <ul>
+              <li class="heading">POPULATION SIZE</li>
+              <li class="value">136,000</li>
+              <li class="heading">LIFE SPAN</li>
+              <li class="value">40 YRS</li>
+              <li class="heading">TOP SPEED</li>
+              <li class="value">22 KM/H</li>
+              <li class="heading">WEIGHT</li>
+              <li class="value">700-1,600 KG</li>
+              <li class="heading">LENGTH</li>
+              <li class="value">3-5.5M</li>
+            </ul>
+          </div>
         </div>
-        <div class="box">
-          <ul>
-            <li class="heading">POPULATION SIZE</li>
-            <li class="value">136,000</li>
-            <li class="heading">LIFE SPAN</li>
-            <li class="value">40 YRS</li>
-            <li class="heading">TOP SPEED</li>
-            <li class="value">22 KM/H</li>
-            <li class="heading">WEIGHT</li>
-            <li class="value">700-1,600 KG</li>
-            <li class="heading">LENGTH</li>
-            <li class="value">3-5.5M</li>
-          </ul>
+        <div class="distribution">
+          <div class="distpara">
+            <h2>Distribution</h2>
+            <p>
+              Belugas are widely distributed in the Arctic and subarctic. Some
+              North American populations are strongly migratory and are
+              identified by their summer grounds (e.g., Beaufort Sea, Lancaster
+              Sound-Barrow Strait-Prince Regent Inlet region, and eastern and
+              western Hudson Bay). Others tend to remain in the same region
+              year-round, making primarily local movements (e.g., Cook Inlet,
+              Bristol Bay, Cumberland Sound and St. Lawrence estuary). Belugas
+              are often found near ice and in or near river mouths. They are
+              social animals and sometimes form aggregations of hundreds or even
+              thousands of individuals.
+            </p>
+          </div>
+          <img
+            id="distributionimage"
+            src="../images/beluga/beluga-distribution.png"
+            alt="beluga whale distribution"
+          />
         </div>
-      </div>
-      <div class="distribution">
-        <div class="distpara">
-          <h2>Distribution</h2>
-          <p>
-            Belugas are widely distributed in the Arctic and subarctic. Some
-            North American populations are strongly migratory and are identified
-            by their summer grounds (e.g., Beaufort Sea, Lancaster Sound-Barrow
-            Strait-Prince Regent Inlet region, and eastern and western Hudson
-            Bay). Others tend to remain in the same region year-round, making
-            primarily local movements (e.g., Cook Inlet, Bristol Bay, Cumberland
-            Sound and St. Lawrence estuary). Belugas are often found near ice
-            and in or near river mouths. They are social animals and sometimes
-            form aggregations of hundreds or even thousands of individuals.
-          </p>
+        <div class="habitat">
+          <div class="habitatpara">
+            <h2>Habitat and Lifestyle</h2>
+            <p>
+              Beluga whales are diurnal and very social animals. During summer,
+              thousands of them gather together in river estuaries to molt. They
+              rub their bodies on the gravel of the sea bed to shed their
+              yellow, withered skin from the previous year and to again become
+              gleaming white. At this time, females with babies will often group
+              together, while males gather in large bachelor groups. Belugas are
+              able to dive deeper than 1,000 m, but usually, they are found upon
+              the surface, swimming slowly. During winter it may become
+              necessary to form breathing holes amongst the ice, which they do
+              with their heavy heads. Belugas are among the most vocal
+              cetaceans. They use their vocalizations for echolocation, during
+              mating, and for communication. They possess a large repertoire,
+              emitting up to 11 different sounds, such as cackles, whistles,
+              trills, and squawks.
+            </p>
+          </div>
+          <img
+            id="habitatimage"
+            src="../images/beluga/beluga-habitat.jpg"
+            alt="beluga whale habitat"
+          />
         </div>
-        <img
-          id="distributionimage"
-          src="../images/beluga/beluga-distribution.png"
-          alt="beluga whale distribution"
-        />
-      </div>
-      <div class="habitat">
-        <div class="habitatpara">
-          <h2>Habitat and Lifestyle</h2>
-          <p>
-            Beluga whales are diurnal and very social animals. During summer,
-            thousands of them gather together in river estuaries to molt. They
-            rub their bodies on the gravel of the sea bed to shed their yellow,
-            withered skin from the previous year and to again become gleaming
-            white. At this time, females with babies will often group together,
-            while males gather in large bachelor groups. Belugas are able to
-            dive deeper than 1,000 m, but usually, they are found upon the
-            surface, swimming slowly. During winter it may become necessary to
-            form breathing holes amongst the ice, which they do with their heavy
-            heads. Belugas are among the most vocal cetaceans. They use their
-            vocalizations for echolocation, during mating, and for
-            communication. They possess a large repertoire, emitting up to 11
-            different sounds, such as cackles, whistles, trills, and squawks.
-          </p>
-        </div>
-        <img
-          id="habitatimage"
-          src="../images/beluga/beluga-habitat.jpg"
-          alt="beluga whale habitat"
-        />
-      </div>
 
-      <div class="population">
-        <div class="poppara">
-          <h2>Population</h2>
-          <h3>Population threats</h3>
-          <p>
-            Hunting by Inuit and Alaska Native groups is the biggest known
-            threat to belugas across certain portions of their range. Further
-            threats are contamination of river estuaries, infectious diseases,
-            and disturbance by vessel transport, gas, and oil production. An
-            increasing concern is a noise, which can damage a whale’s hearing
-            and affect its ability to navigate, communicate, and locate prey.
-          </p>
-          <h3>Population number</h3>
-          <p>
-            According to the IUCN Red List, the total size of the beluga whale
-            population is 136,000 mature individuals. Currently, this species is
-            classified as Least Concern (LC) on the IUCN Red List.
-          </p>
+        <div class="population">
+          <div class="poppara">
+            <h2>Population</h2>
+            <h3>Population threats</h3>
+            <p>
+              Hunting by Inuit and Alaska Native groups is the biggest known
+              threat to belugas across certain portions of their range. Further
+              threats are contamination of river estuaries, infectious diseases,
+              and disturbance by vessel transport, gas, and oil production. An
+              increasing concern is a noise, which can damage a whale’s hearing
+              and affect its ability to navigate, communicate, and locate prey.
+            </p>
+            <h3>Population number</h3>
+            <p>
+              According to the IUCN Red List, the total size of the beluga whale
+              population is 136,000 mature individuals. Currently, this species
+              is classified as Least Concern (LC) on the IUCN Red List.
+            </p>
+          </div>
+          <img
+            id="populationimage"
+            src="../images/beluga/beluga-population.jpg"
+            alt="beluga whales swimming "
+          />
         </div>
-        <img
-          id="populationimage"
-          src="../images/beluga/beluga-population.jpg"
-          alt="beluga whales swimming "
-        />
-      </div>
-      <div class="diet">
-        <div class="dietpara">
-          <h2>Diet and Nutrition</h2>
-          <p>
-            Belugas are carnivores (piscivores, molluscivores) and eat a variety
-            of prey, such as smelt, flatfish, flounder, salmon, sculpins, and
-            cod. They also eat invertebrates such as crabs, clams, shrimps,
-            worms, octopus, squid, and more creatures that live on the seabed.
-          </p>
+        <div class="diet">
+          <div class="dietpara">
+            <h2>Diet and Nutrition</h2>
+            <p>
+              Belugas are carnivores (piscivores, molluscivores) and eat a
+              variety of prey, such as smelt, flatfish, flounder, salmon,
+              sculpins, and cod. They also eat invertebrates such as crabs,
+              clams, shrimps, worms, octopus, squid, and more creatures that
+              live on the seabed.
+            </p>
+          </div>
+          <img
+            id="dietimage"
+            src="../images/beluga/beluga-diet.jpg"
+            alt="beluga whale eating fish"
+          />
         </div>
-        <img
-          id="dietimage"
-          src="../images/beluga/beluga-diet.jpg"
-          alt="beluga whale eating fish"
-        />
-      </div>
 
-      <div class="mating">
-        <div class="matingpara">
-          <h2>Mating Habits</h2>
-          <p>
-            Beluga whales are polygynous, a dominant male often mating with
-            several females during one mating season. The mating season takes
-            place between late February and early April. Gestation lasts 14
-            months and a single calf is produced. The calf has a grayish color
-            and is very well developed. The nursery pod stays together during
-            the delivery, then all of them move off except for a teenage
-            nursemaid. Birthing usually takes place near rivers because the
-            temperature of the water is ten degrees higher there. This is for
-            the benefit of the calf, which has less blubber than a full-grown
-            adult. The newborn stays between the two females, their swimming
-            pulling him along with the current. A calf totally depends on its
-            mother’s milk for one year, and lactation lasts as long as 1.5 to 2
-            years. Females become reproductively mature in 4 to 7 years, and
-            males in 7 to 9 years of age.
-          </p>
+        <div class="mating">
+          <div class="matingpara">
+            <h2>Mating Habits</h2>
+            <p>
+              Beluga whales are polygynous, a dominant male often mating with
+              several females during one mating season. The mating season takes
+              place between late February and early April. Gestation lasts 14
+              months and a single calf is produced. The calf has a grayish color
+              and is very well developed. The nursery pod stays together during
+              the delivery, then all of them move off except for a teenage
+              nursemaid. Birthing usually takes place near rivers because the
+              temperature of the water is ten degrees higher there. This is for
+              the benefit of the calf, which has less blubber than a full-grown
+              adult. The newborn stays between the two females, their swimming
+              pulling him along with the current. A calf totally depends on its
+              mother’s milk for one year, and lactation lasts as long as 1.5 to
+              2 years. Females become reproductively mature in 4 to 7 years, and
+              males in 7 to 9 years of age.
+            </p>
+          </div>
+          <img
+            id="matingimage"
+            src="../images/beluga/beluga-mating.jpg"
+            alt="beluga whale mating"
+          />
         </div>
-        <img
-          id="matingimage"
-          src="../images/beluga/beluga-mating.jpg"
-          alt="beluga whale mating"
-        />
+        <div class="facts">
+          <div>
+            <h2>Fun Facts For Kids</h2>
+            <ul>
+              <li>
+                Beluga whale offspring return to places where they have been
+                with their mothers, who they remember and bond with year after
+                year.
+              </li>
+              <li>
+                Belugas are called "canaries of the sea," due to the vast range
+                of sounds they produce, including whistles, squeals, moos,
+                clicks, and chirps. Besides vocal communication they also
+                communicate by means of rubbing or bumping against each other,
+                chasing each other, and playing games.
+              </li>
+              <li>
+                Beluga whales' dives can go as deep as 800 meters and may be for
+                up to 25 minutes.
+              </li>
+              <li>Belugas can swim backward.</li>
+              <li>
+                Belugas can alter the shape of their forehead, known as a
+                "melon", by means of blowing air around their sinuses
+              </li>
+              <li>
+                Belugas are able to see within and outside of water, but their
+                vision is relatively poor when compared to dolphins.
+              </li>
+            </ul>
+          </div>
+          <div id="slideshow_images">
+            <img
+              src="images/1L.jpg"
+              name="slideshow"
+              id="slideshow"
+              width="430"
+              height="300"
+            />
+          </div>
+        </div>
       </div>
-      <div class="facts">
-        <h2>Fun Facts For Kids</h2>
-        <ul>
-          <li>
-            Beluga whale offspring return to places where they have been with
-            their mothers, who they remember and bond with year after year.
-          </li>
-          <li>
-            Belugas are called "canaries of the sea," due to the vast range of
-            sounds they produce, including whistles, squeals, moos, clicks, and
-            chirps. Besides vocal communication they also communicate by means
-            of rubbing or bumping against each other, chasing each other, and
-            playing games.
-          </li>
-          <li>
-            Beluga whales' dives can go as deep as 800 meters and may be for up
-            to 25 minutes.
-          </li>
-          <li>Belugas can swim backward.</li>
-          <li>
-            Belugas can alter the shape of their forehead, known as a "melon",
-            by means of blowing air around their sinuses
-          </li>
-          <li>
-            Belugas are able to see within and outside of water, but their
-            vision is relatively poor when compared to dolphins.
-          </li>
-        </ul>
-      </div>
-    </div>
     </main>
     <!-- content ends -->
     <!-- footer -->
     <div class="footerclass"></div>
+    <script src="script/belugawhale.js"></script>
+    <script type="text/javascript">
+      $(function () {
+        $(".navclass").load("navigation.html");
+      });
+      $(function () {
+        $(".footerclass").load("footer.html");
+      });
+    </script>
   </body>
 </html>
-<script type="text/javascript">
-  $(function () {
-    $(".navclass").load("navigation.html");
-  });
-  $(function () {
-    $(".footerclass").load("footer.html");
-  });
-</script>
