--- a/page1_belugawhale.html
+++ b/page1_belugawhale.html
@@ -224,10 +224,10 @@
           <div id="slideshow_images">
             <img
               src="images/1L.jpg"
-              name="slideshow"
               id="slideshow"
               width="430"
               height="300"
+              alt="slideshow of beluga whale images"
             />
           </div>
         </div>
@@ -237,7 +237,7 @@
     <!-- footer -->
     <div class="footerclass"></div>
     <script src="script/belugawhale.js"></script>
-    <script type="text/javascript">
+    <script>
       $(function () {
         $(".navclass").load("navigation.html");
       });
