project phase 2 and 3

--- a/Animal Merchandise.html
+++ b/Animal Merchandise.html
@@ -301,7 +301,7 @@
             <!-- Keychain -->
             <div id="image9">
                 <h3>Keychain</h3>
-                <div class="options">
+                <div class="options1">
                     <!-- Keychain Quantity selection-->
                     Quantity
                     <select class="quantity" size="1">
@@ -328,7 +328,7 @@
             <!-- Watch -->
             <div id="image10">
                 <h3>Watch</h3>
-                <div class="options">
+                <div class="options1">
                     <!-- Watch Quantity selection-->
                     Quantity
                     <select class="quantity" size="1">
