project phase 2 and 3

--- a/Arctic Fox.html
+++ b/Arctic Fox.html
@@ -6,11 +6,11 @@
     <link rel="shortcut icon" href="Images/Thumbnail.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Edu+TAS+Beginner:wght@600&family=Gemunu+Libre:wght@700&family=Permanent+Marker&family=Reggae+One&family=Roboto:wght@300&family=Yeseva+One&display=swap"
       rel="stylesheet"
     >
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <meta
       name="description"
       content="Canada is one of the major desination of animals 
@@ -62,7 +62,7 @@
                alt="arctic fox">
           <img src="Images/af4.jfif"
                alt="arctic fox">
-      </div>
+        </div>
         <br>
         <p class="class1">POPULATION SIZE: UNKNOWN</p>
         <p class="class1">LIFE SPAN: 3-14 YRS</p>
@@ -71,7 +71,6 @@
         <p class="class1">HEIGHT: 25-30 CM</p>
         <p class="class1">LENGTH: 52-55 CM</p>
         <br><br>
-
         <p
           class="class1"
           style="
@@ -239,8 +238,8 @@
           class="class10"
           src="https://images.fineartamerica.com/images-medium-large-5/arctic-foxes-alopex-lagopus-playing-thomas-and-pat-leeson.jpg"
           alt="arctic fox"
-          width="600px"
-          height="350px"
+          width="30%"
+          height="30%"
         >
         </div>
       </div>
