about us + feature 3

--- a/Home.html
+++ b/Home.html
@@ -41,7 +41,7 @@
             A great range of plant and animal life characterizes the vast area of
             Canada, with its varied geographic and climatic zones.
               </p>
-                <button class="primary_button">About us</button>
+                <a class="primary_button" href="aboutus.html">About Us</a>
             </div> 
     </div>
     </section>
