--- a/navigation.html
+++ b/navigation.html
@@ -42,7 +42,7 @@
         <a href="polarbear.html">POLAR BEAR</a>
       </div>
     </div>
-    <a href="blog.html">ABOUT US</a>
+    <a href="aboutus.html">ABOUT US</a>
     <a href="contact.html">CONTACT US</a>
   </div>
   </nav>
@@ -76,7 +76,7 @@
     <a href="beaver.html">BEAVER</a>
     <a href="polarbear.html">POLAR BEAR</a>
   </div>
-  <a href="#">ABOUT US</a>
+  <a href="aboutus.html">ABOUT US</a>
   <a href="contact.html">CONTACT US</a>
 </div>
 
