--- a/beaver.html
+++ b/beaver.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beaver</title>
     <link rel="stylesheet" href="CSS/beever.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
@@ -134,30 +133,25 @@
             </section>
         </div>
     </div>
-    <button id="funfactsbutton" onclick="alertRandomFunFact()">FUN FACTS FOR KIDS</button>
+    <button id="funfactsbutton" data-popup-target="#popup">FUN FACTS FOR KIDS</button>
+    <div class="popup" id="popup">
+    <div class="popup-header">
+        <div class="title">Fun Facts About Beavers</div>
+        <button data-close-button class="close-button">&times;</button>
+    </div>
+    <div class="popup-body">
+        <ol>
+            <li>Teeth of beavers never stop growing, so they gnaw on trees in order to prevent teeth from becoming too long.</li><br>
+            <li>Beavers use their tails for swimming as well as flapping the water in order to scare predators away.</li><br>
+            <li>Beavers have transparent eyelids, serving as underwater glasses and helping them see clearly under the water.</li><br>
+            <li>Cases are known, when beavers' and muskrats' families share one lodge together!</li>
+        </ol>
+    </div>
+    </div>
+    <div id="overlay"></div>
     <button id="totopbutton" onclick="toTop()">BACK TO TOP</button>
     <div class="footerclass"></div>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="script/beaver.js"></script>
   </body>
 </html>
-<script type="text/javascript">
-    $(function(){
-        $(".navclass").load("navigation.html");
-     } );
-     $(function(){
-        $(".footerclass").load("footer.html");
-     } );
-
-    // function that brings you to top of page
-    const toTop = () => window.scrollTo({top: 0, behavior: 'smooth'});
-    // function that alerts a random fun fact
-    alertRandomFunFact = function() {
-    let facts = new Array();
-        facts[0] = "Teeth of beavers never stop growing, so they gnaw on trees in order to prevent teeth from becoming too long.";
-        facts[1] = "Beavers use their tails for swimming as well as flapping the water in order to scare predators away.";
-        facts[2] = "Beavers have transparent eyelids, serving as underwater glasses and helping them see clearly under the water.";
-        facts[3] = "Cases are known, when beavers' and muskrats' families share one lodge together!";
-        let rand = Math.floor(Math.random()*facts.length);
-        window.alert(facts[rand]);
-    }
-        
-</script>
