--- a/polarbear.html
+++ b/polarbear.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polar Bear</title>
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="CSS/main-rwd.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -132,29 +131,25 @@
             </section>
         </div>
     </div>
-    <button id="funfactsbutton" onclick="alertRandomFunFact()">FUN FACTS FOR KIDS</button>
+    <button id="funfactsbutton" data-popup-target="#popup">FUN FACTS FOR KIDS</button>
+    <div class="popup" id="popup">
+    <div class="popup-header">
+        <div class="title">Fun Facts About Polar Bears</div>
+        <button data-close-button class="close-button">&times;</button>
+    </div>
+    <div class="popup-body">
+        <ol>
+            <li>Polar bears are marine mammals because they spend many months of the year at sea. However, they are the only living marine mammals with powerful, large limbs and feet that allow them to cover kilometers on foot and run on land.</li><br>
+            <li>A Polar bear's fur is hollow and reflects light, so it is not actually white. Their fur is also water repellent and oily. The bears can shake themselves dry after a swim.</li><br>
+            <li>Female Polar bears are known to be very good mothers and may adopt other cubs.</li><br>
+            <li>A Polar bear is strong enough to kill an animal by giving it one blow with its paw.</li>
+        </ol>
+    </div>
+    </div>
+    <div id="overlay"></div>
     <button id="totopbutton" onclick="toTop()">BACK TO TOP</button>
     <div class="footerclass"></div>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="script/polarbear.js"></script>
   </body>
 </html>
-<script type="text/javascript">
-    $(function(){
-        $(".navclass").load("navigation.html");
-     } );
-     $(function(){
-        $(".footerclass").load("footer.html");
-     } );
-
-    // function that brings you to top of page
-    const toTop = () => window.scrollTo({top: 0, behavior: 'smooth'});
-    // function that alerts a random fun fact
-    alertRandomFunFact = function() {
-    let facts = new Array();
-        facts[0] = "Polar bears are marine mammals because they spend many months of the year at sea. However, they are the only living marine mammals with powerful, large limbs and feet that allow them to cover kilometers on foot and run on land.";
-        facts[1] = "A Polar bear's fur is hollow and reflects light, so it is not actually white. Their fur is also water repellent and oily. The bears can shake themselves dry after a swim.";
-        facts[2] = "Female Polar bears are known to be very good mothers and may adopt other cubs.";
-        facts[3] = "A Polar bear is strong enough to kill an animal by giving it one blow with its paw.";
-        let rand = Math.floor(Math.random()*facts.length);
-        window.alert(facts[rand]);
-    }
-</script>
