--- a/polarbear.html
+++ b/polarbear.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Polar Bear</title>
-    <link rel="stylesheet" href="CSS/main-rwd.css">
+    <link rel="stylesheet" href="CSS/polarbear.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
