small css changes - spence

--- a/beaver.html
+++ b/beaver.html
@@ -140,12 +140,12 @@
         <button data-close-button class="close-button">&times;</button>
     </div>
     <div class="popup-body">
-        <ol>
-            <li>Teeth of beavers never stop growing, so they gnaw on trees in order to prevent teeth from becoming too long.</li><br>
-            <li>Beavers use their tails for swimming as well as flapping the water in order to scare predators away.</li><br>
-            <li>Beavers have transparent eyelids, serving as underwater glasses and helping them see clearly under the water.</li><br>
+        <ul>
+            <li>Teeth of beavers never stop growing, so they gnaw on trees in order to prevent teeth from becoming too long.</li>
+            <li>Beavers use their tails for swimming as well as flapping the water in order to scare predators away.</li>
+            <li>Beavers have transparent eyelids, serving as underwater glasses and helping them see clearly under the water.</li>
             <li>Cases are known, when beavers' and muskrats' families share one lodge together!</li>
-        </ol>
+        </ul>
     </div>
     </div>
     <div id="overlay"></div>
