--- a/bison.html
+++ b/bison.html
@@ -146,12 +146,12 @@
         <button data-close-button class="close-button">&times;</button>
     </div>
     <div class="popup-body">
-        <ol>
-            <li>The groups that bison create are called obstinacies, gangs, or herds.</li><br>
-            <li>Hunch on its back is nothing but a bunch of muscles. The hunch also helps bison to move into the snowpack.</li><br>
-            <li>Bison is an excellent jumper, able to jump up to 6 feet off the ground.</li><br>
+        <ul>
+            <li>The groups that bison create are called obstinacies, gangs, or herds.</li>
+            <li>Hunch on its back is nothing but a bunch of muscles. The hunch also helps bison to move into the snowpack.</li>
+            <li>Bison is an excellent jumper, able to jump up to 6 feet off the ground.</li>
             <li>Along with jumping, bison are excellent in running and swimming.</li>
-        </ol>
+        </ul>
     </div>
     </div>
     <div id="overlay"></div>
