--- a/polarbear.html
+++ b/polarbear.html
@@ -138,12 +138,12 @@
         <button data-close-button class="close-button">&times;</button>
     </div>
     <div class="popup-body">
-        <ol>
-            <li>Polar bears are marine mammals because they spend many months of the year at sea. However, they are the only living marine mammals with powerful, large limbs and feet that allow them to cover kilometers on foot and run on land.</li><br>
-            <li>A Polar bear's fur is hollow and reflects light, so it is not actually white. Their fur is also water repellent and oily. The bears can shake themselves dry after a swim.</li><br>
-            <li>Female Polar bears are known to be very good mothers and may adopt other cubs.</li><br>
+        <ul>
+            <li>Polar bears are marine mammals because they spend many months of the year at sea. However, they are the only living marine mammals with powerful, large limbs and feet that allow them to cover kilometers on foot and run on land.</li>
+            <li>A Polar bear's fur is hollow and reflects light, so it is not actually white. Their fur is also water repellent and oily. The bears can shake themselves dry after a swim.</li>
+            <li>Female Polar bears are known to be very good mothers and may adopt other cubs.</li>
             <li>A Polar bear is strong enough to kill an animal by giving it one blow with its paw.</li>
-        </ol>
+        </ul>
     </div>
     </div>
     <div id="overlay"></div>
