--- a/alpaka.html
+++ b/alpaka.html
@@ -164,7 +164,8 @@
         <a>
         <img id="slideshow"
           src="Images/caramelo.webp"
-          style="padding: 30px; border-radius: 50px"
+          style="padding: 30px; border-radius: 50px;height: 27rem;
+          width: 35rem;"
         />
       </a>
       </div>
