--- a/alpaka.html
+++ b/alpaka.html
@@ -178,7 +178,7 @@
       <div class="factslist">
         <img
           src="Images/371873.png"
-          style="width: 4rem; padding-right: 20px; height: 4rem"
+          style="  padding-right: 20px; height: 4rem"
         />
         <div>
         <h2>FUN FACT ONE</h2>
@@ -193,7 +193,7 @@
       <div class="factslist">
         <img
           src="Images/371873.png"
-          style="width: 4rem; padding-right: 20px; height: 4rem"
+          style="  padding-right: 20px; height: 4rem"
         />
         <div>
           <h2>FUN FACT TWO</h2>
@@ -209,7 +209,7 @@
       <div class="factslist">
         <img
           src="Images/371873.png"
-          style="width: 4rem; padding-right: 20px; height: 4rem"
+          style="  padding-right: 20px; height: 4rem"
         />
         <div>
           <h2>FUN FACT THREE</h2>
@@ -222,7 +222,7 @@
       <div class="factslist">
         <img
           src="Images/371873.png"
-          style="width: 4rem; padding-right: 20px; height: 4rem"
+          style="  padding-right: 20px; height: 4rem"
         />
         <div>
           <h2>FUN FACT FOUR</h2>
@@ -237,7 +237,7 @@
       <div class="factslist">
         <img
           src="Images/371873.png"
-          style="width: 4rem; padding-right: 20px; height: 4rem"
+          style="  padding-right: 20px; height: 4rem"
         />
         <div>
           <h2>FUN FACT FIVE</h2>
